[gd_scene load_steps=4 format=2]

[ext_resource path="res://Probe.gd" type="Script" id=1]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Probe" type="Area2D"]
position = Vector2( 588, 373 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, -20 )
rotation = 1.5708
polygon = PoolVector2Array( 0, 30, 60, 0, 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Explosion" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_Probe_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="explosion_completed" from="Explosion" to="." method="_on_Explosion_explosion_completed"]
